# aegis-keyvault

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
aegis_keyvault/: api.py  cli.py  database.py
docs/: DEFERRED.md  ROADMAP.md
docs/context/: current-state.md  handoff.md
libs/: __init__.py
libs/aegis_auth/: __init__.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_create_tables.py  0002_add_secrets_table.py  0003_add_secret_type.py  0004_principal_policy.py
services/: __init__.py
services/aegis/: __init__.py  audit.py  cli.py  config.py  db.py  main.py  models.py  schemas.py  security.py
tests/: conftest.py  test_health.py  test_introspection.py  test_principals.py  test_secrets.py  test_token_flow.py
