[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-keyvault"
version = "0.1.0"
description = "Aegis KeyVault: API keys to short-lived scoped tokens"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pyjwt>=2.8",
  "bcrypt>=4.1",
  "pydantic>=2.6",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
  "freezegun>=1.4",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools]
packages = ["services", "services.aegis", "libs", "libs.aegis_auth", "aegis_keyvault"]

[tool.setuptools.package-data]
aegis_keyvault = ["py.typed"]
